--- a/src/Organizer.SPA/src/app/event-viewer/event-viewer.component.scss
+++ b/src/Organizer.SPA/src/app/event-viewer/event-viewer.component.scss
@@ -11,6 +11,9 @@
   @include font-primary;
   @include flex-center;
   overflow: hidden;
+  -webkit-touch-callout: none; // Prevent iOS callout on long press
+  -webkit-user-select: none;
+  user-select: none;
 
   &:hover {
     opacity: 0.7;
